--- a/html/ejercicio1.html
+++ b/html/ejercicio1.html
@@ -7,7 +7,50 @@
 </head>
 <body>
     <form >
-        
+        <fieldset>
+
+            <legend>your details</legend>
+
+            <ol style="list-style-type: decimal;">
+                <li>Name  &nbsp;<input type="text" placeholder="First and last name"></li>
+                <li>Email &nbsp;<input type="text" placeholder="example@domain.com"></li>
+                <li>Phone <input type="text" placeholder="Eg. +447500000000"></li>
+            </ol>
+        </fieldset>
+        <fieldset>
+
+            <legend>Delivery address</legend>
+
+            <ol style="list-style-type: decimal;">
+                <li>Address  &nbsp;<textarea name="" id="" cols="30" rows="10"></textarea> </li>
+                <li>Post code &nbsp;<input type="text" ></li>
+                <li>Country <input type="text"></li>
+                
+            </ol>
+        </fieldset>
+        <fieldset>
+
+            <legend>Card details</legend>
+
+            <ol style="list-style-type: decimal;">
+                <li>
+                    <fieldset>
+                        <legend>Card type</legend>
+                        <ol>
+                            <li><input type="radio" name="card type">VISA</li>
+                            <li><input type="radio" name="card type">AmEx</li>
+                            <li><input type="radio" name="card type">Mastercard</li>
+                        </ol>
+                    </fieldset>
+                </li>
+                <li>Card number &nbsp;<input type="text"></li>
+                <li>Security code <input type="text"></li>
+                <li>Name on card <input type="text" placeholder="Exact name as on the card"></li>
+            </ol>
+        </fieldset>
+        <fieldset>
+            <input type="submit" value="Buy it!">
+        </fieldset>
     </form>
 </body>
 </html>
