Corregido el contenedor externo (form)

--- a/html/ejercicio3.html
+++ b/html/ejercicio3.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejemplo Tabla # 3</title>
 </head>
 <body>
+    <form action="">
+        <table>
+            <tr>
+                <td>
+                    <fieldset>
+
+                        <legend>Alta en el Servicio</legend>
     
+                        Nombre <br>
+                        <input type="text" width="50px"><br><br>
+                        Apellidos <br>
+                        <input type="text"> <br><br>
+                        DNI <br>
+                        <input type="text"> <br><br>
+                        Contraseña <br>
+                        <input type="text">
+    
+                     </fieldset>
+                </td>
+
+                <td>
+                    <fieldset>
+
+                        <legend>Datos de contacto</legend>
+
+                        Telefono <br>
+                        <input type="text"> <br><br>
+                        Email <br>
+                        <input type=""> <br><br>
+                        Dirección <br>
+                        <input type="text"> <br><br>
+                        Código Postal <br>
+                        <input type="text"> 
+
+
+                    </fieldset>
+                </td>
+            </tr>
+            <tr><td colspan="2"><br> <input type="submit" value="Dame de alta" style="margin-left: 2px;"></td></tr>
+        </table>
+    </form>
 </body>
 </html>
