agregué enlaces de volver al menú

--- a/html/ejercicio2.html
+++ b/html/ejercicio2.html
@@ -34,8 +34,9 @@
                
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Zip <input type="text" style="margin-left: 149px; margin-bottom: 5px;"><br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Upload Photo <input type="button" style="margin-left: 82px; margin-bottom: 5px;" value="Browse...">&nbsp;&nbsp; No file selected.<br>
-        <input type="submit" value="Guardar" style="margin-left: 50px; margin-top: 50px;">
+        <input type="submit" value="sign up" style="margin-left: 50px; margin-top: 50px;">
     </form>
-    
+    <br><br>
+    <a href="../index.html">Volver al Menú</a>
 </body>
 </html>
