--- a/html/ejercicio3.html
+++ b/html/ejercicio3.html
@@ -21,7 +21,7 @@
                         DNI <br>
                         <input type="text"> <br><br>
                         Contraseña <br>
-                        <input type="text">
+                        <input type="password">
     
                      </fieldset>
                 </td>
@@ -47,5 +47,7 @@
             <tr><td colspan="2"><br> <input type="submit" value="Dame de alta" style="margin-left: 2px;"></td></tr>
         </table>
     </form>
+    <br><br>
+    <a href="../index.html">Volver al Menú</a>
 </body>
 </html>
