--- a/html/ejercicio1.html
+++ b/html/ejercicio1.html
@@ -52,5 +52,7 @@
             <input type="submit" value="Buy it!">
         </fieldset>
     </form>
+    <br><br>
+    <a href="../index.html">Volver al Menú</a>
 </body>
 </html>
